# python-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/splox/: __init__.py  _client.py  _mcp.py  _models.py  _resources.py  _transport.py  exceptions.py
tests/: integration_test.py  integration_test_mcp.py  integration_test_memory.py  test_client.py  test_exceptions.py  test_models.py  test_sse.py
