[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splox"
version = "0.1.0"
description = "Official Python SDK for the Splox API — run workflows, manage chats, and monitor execution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Splox", email = "support@splox.io" },
]
keywords = ["splox", "ai", "workflow", "agent", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://splox.io"
Documentation = "https://docs.splox.io"
Repository = "https://github.com/splox-ai/python-sdk"
Issues = "https://github.com/splox-ai/python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/splox"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
